fix footer gap

--- a/style.css
+++ b/style.css
@@ -529,7 +529,7 @@ footer div * {
     padding: 56px 30px 0px 30px;
     background-repeat: no-repeat;
     background-size: cover;
-    column-gap: 60px;
+    column-gap: 85px;
   }
 
   footer div {
